Complete Team gRPC Service controller